# analyse-pyspark

./: .gitignore  README.md  WORKFLOW_TEST.md  analyse.py  analyse_notebook.ipynb  main.py  mise.toml  pyproject.toml  requirements.txt  streamlit_app.py  test_analyse.py
data/: employee_data.csv
